# simplex-iterator-program

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  fraction.cpp  fraction.h  simplex.cpp  simplexTable.cpp  simplexTable.h
src/: fraction.cpp  fraction.h  simplex.cpp  simplexTable.cpp  simplexTable.h
